@@ -1,6 +1,18 @@
-desc "Prepends the route map to the top of routes.rb"
+desc "Adds the route map to routes.rb"
 task :annotate_routes => :environment do
   annotate_lib = File.expand_path(File.dirname(File.dirname(__FILE__)))
   require "#{annotate_lib}/annotate/annotate_routes"
-  AnnotateRoutes.do_annotate
+
+  options={}
+  options[:position_in_routes] = ENV['position_in_routes'] || ENV['position'] || 'after'
+  AnnotateRoutes.do_annotate(options)
+end
+
+desc "Removes the route map from routes.rb"
+task :remove_routes => :environment do
+  annotate_lib = File.expand_path(File.dirname(File.dirname(__FILE__)))
+  require "#{annotate_lib}/annotate/annotate_routes"
+
+  options={}
+  AnnotateRoutes.remove_annotations(options)
 end
