@@ -6,6 +6,10 @@
 * Bugfix: Load the Rakefile from the current directory, not the first Rakefile
   in our load path.
 * Added support for new FactoryGirl naming convention.
+* Fix behavior of route annotations in newer versions of Rake that don't spit
+  out the CWD as their first line of output.
+* Routes can now be appended, pre-pended, or removed -- and do sane things in
+  all cases.
 * Expose all `position_*` variables as CLI params.
 * Make `ENV ['position']` work as a default for all the `ENV ['position_*']`
   variables.
